--- a/NEGOCIO/NEGOCIO.csproj
+++ b/NEGOCIO/NEGOCIO.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Apoderado.cs" />
+    <Compile Include="detalleCalificacion.cs" />
     <Compile Include="detalleInscripcion.cs" />
     <Compile Include="Estudiante.cs" />
     <Compile Include="Inscripcion.cs" />
