--- a/PRESENTACION/PRESENTACION.csproj
+++ b/PRESENTACION/PRESENTACION.csproj
@@ -70,12 +70,29 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="consultasWS.aspx" />
     <Content Include="frmApoderado.aspx" />
     <Content Include="frmEstudiante.aspx" />
     <Content Include="frmInscripcion.aspx" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Web References\wsColegio\Reference.map">
+      <Generator>MSDiscoCodeGenerator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Web References\wsColegio\wsColegio.disco" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="consultasWS.aspx.cs">
+      <DependentUpon>consultasWS.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="consultasWS.aspx.designer.cs">
+      <DependentUpon>consultasWS.aspx</DependentUpon>
+    </Compile>
     <Compile Include="frmApoderado.aspx.cs">
       <DependentUpon>frmApoderado.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -98,9 +115,20 @@
       <DependentUpon>frmInscripcion.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="Web References\wsColegio\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.map</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Web References\wsColegio\wsColegio.wsdl" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -117,6 +145,25 @@
       <Project>{71b7402c-c5f6-4b38-9bef-475ba12f1fbd}</Project>
       <Name>NEGOCIO</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferences Include="Web References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferenceUrl Include="https://localhost:44351/wsColegio.asmx">
+      <UrlBehavior>Dynamic</UrlBehavior>
+      <RelPath>Web References\wsColegio\</RelPath>
+      <UpdateFromURL>https://localhost:44351/wsColegio.asmx</UpdateFromURL>
+      <ServiceLocationURL>
+      </ServiceLocationURL>
+      <CachedDynamicPropName>
+      </CachedDynamicPropName>
+      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
+      <CachedSettingsPropName>PRESENTACION_wsColegio_wsColegio</CachedSettingsPropName>
+    </WebReferenceUrl>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
